--- a/index.html
+++ b/index.html
@@ -42,17 +42,25 @@
                   <div id="navmenubox" class="rounded-pill text-center">
                     <div class="mx-auto" id="">
                       <button class="mx-3 btn text-white" id="navitem">
-                        <p>
+                        <a
+                          style="text-decoration: none; color: white"
+                          href="http://api.whatsapp.com/send/?phone=13203481995&text=Hi"
+                        >
                           <i class="fas fa-headphones-alt text-white me-2"></i>
                           Support
-                        </p>
+                        </a>
                       </button>
                     </div>
                   </div>
                 </div>
                 <div class="col-md-6" id="joinustop">
                   <div class="w-100 rounded-pill text-center" id="navjoinbtn">
-                    <a class="btn" href="" id="joinusnav">Join us Today</a>
+                    <a
+                      class="btn"
+                      href="http://api.whatsapp.com/send/?phone=13203481995&text=Hi"
+                      id="joinusnav"
+                      >Join us Today</a
+                    >
                   </div>
                 </div>
               </div>
@@ -96,7 +104,10 @@
             Invest in your health with us : Happy Investing
           </p>
           <br />
-          <a id="joinuslanding" class="btn px-5 rounded-pill py-2 box" href=""
+          <a
+            id="joinuslanding"
+            class="btn px-5 rounded-pill py-2 box"
+            href="http://api.whatsapp.com/send/?phone=13203481995&text=Hi"
             >Join us today</a
           >
           <br />
@@ -142,17 +153,19 @@
               </h3>
               <br />
               <p style="font-size: 18px; color: white">
-                <span>&#10003;</span> Lorem ipsum dolor sit amet consectetur
-                adipisicing.
+                <span>&#10003;</span> 24x7 Nutritionist.
               </p>
               <p style="font-size: 18px; color: white">
-                <span>&#10003;</span> Lorem ipsum dolor sit amet
+                <span>&#10003;</span> 24x7 Mental Wellness
               </p>
               <p style="font-size: 18px; color: white">
-                <span>&#10003;</span> Lorem ipsum dolor sit amet consectetur .
+                <span>&#10003;</span> Custom plans
               </p>
               <p style="font-size: 18px; color: white">
-                <span>&#10003;</span> sit amet consectetur adipisicing.
+                <span>&#10003;</span> Weekly updates
+              </p>
+              <p style="font-size: 18px; color: white">
+                <span>&#10003;</span> Healthy Lifestyle ke Funde everyday
               </p>
             </div>
           </div>
@@ -182,11 +195,12 @@
           <br id="mobnotbr" />
           <br id="mobnotbr" />
           <div class="col-md-8 mx-auto text-center">
-            <h3 class="text-white box">Lorem ipsum dolor sit amet.</h3>
+            <h3 class="text-white box">
+              Highly rated psychologically driven program
+            </h3>
             <h5 class="box" style="color: #b4fff6a1">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad
-              quisquam voluptates doloribus aperiam beatae nisi? Ad quisquam
-              voluptates doloribus aperiam beatae nisi?
+              90 % people joining the program feel light hearted and confident
+              about their lifestyle choices
             </h5>
           </div>
         </div>
@@ -202,37 +216,27 @@
         <span style="color: #298e3e">vetted</span> therapists who you can trust
       </h3>
       <h5 class="" style="color: #909090">
-        Some of our prestigious collaborators
+        Some of our prestigious collaborators belong to these institutions
       </h5>
       <br />
       <div class="row">
-        <div class="col-md-4 box">
+        <div class="col-md-6 box">
           <div class="row">
-            <div class="col-6">
-              <img class="w-100" src="/img/amsa.png" alt="" />
+            <div class="col-6 text-center">
+              <img class="w-75" src="/img/cuh.png" alt="" />
             </div>
-            <div class="col-6">
-              <img class="w-100" src="/img/mha.png" alt="" />
+            <div class="col-6 text-center">
+              <img class="w-75" src="/img/mcca.png" alt="" />
             </div>
           </div>
         </div>
-        <div class="col-md-4 box">
+        <div class="col-md-6 box">
           <div class="row">
-            <div class="col-6">
-              <img class="w-100" src="/img/mighty.png" alt="" />
+            <div class="col-6 text-center">
+              <img class="w-75" src="/img/ignou.png" alt="" />
             </div>
-            <div class="col-6">
-              <img class="w-100" src="/img/thaid.png" alt="" />
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4 box">
-          <div class="row">
-            <div class="col-6">
-              <img class="w-100" src="/img/ismho.png" alt="" />
-            </div>
-            <div class="col-6">
-              <img class="w-100" src="/img/tmhi.png" alt="" />
+            <div class="col-6 text-center">
+              <img class="w-75" src="/img/sfh.png" alt="" />
             </div>
           </div>
         </div>
@@ -286,7 +290,7 @@
               <img id="paraIcon" src="/img/msg.svg" alt="" />
               <br />
               <br />
-              <p id="paraValue">959595</p>
+              <p id="paraValue">17199</p>
               <p id="parameters">Messages sent</p>
             </div>
             <div class="col-md-4 box">
@@ -351,7 +355,7 @@
                 ><b>1</b></a
               >
               <p class="w-75 ms-0" style="font-size: 24px; font-weight: 500">
-                Bespoke lessons for employees
+                Custom lessons
               </p>
             </div>
           </div>
@@ -397,7 +401,7 @@
                 ><b>2</b></a
               >
               <p class="w-75 ms-0" style="font-size: 24px; font-weight: 500">
-                Insights on how to structure their work environment
+                Make confident lifestyle choices
               </p>
             </div>
           </div>
@@ -513,10 +517,14 @@
                       class="h-100 w-100"
                       style="
                         border-radius: 24px 0 24px 24px;
-                        background: #eef8f0;
+                        background: #eef8f05b;
                       "
                     >
-                      <h5 class="my-2" id="testimony" style="">
+                      <h6
+                        class="my-2"
+                        id="testimony"
+                        style="font-style: italic"
+                      >
                         <i
                           class="fa fa-quote-left"
                           style="
@@ -525,26 +533,21 @@
                             margin-right: 8px;
                           "
                         ></i>
-                        Lorem Ipsum is simply dummy text of the printing and
-                        typesetting industry.
-                      </h5>
+                        I have started seeing results now. I am confident about
+                        what to eat now.
+                      </h6>
+                      <br />
                       <h5 id="testimonyGiver" style="color: #324a5e">
-                        <b>Firstname Surname</b>
+                        <b>Sejal</b>
                       </h5>
                     </div>
                   </div>
                   <div class="col-md-6 pt-2">
                     <p class="p-0 m-0" style="color: #324a5e">
-                      <b
-                        ><b style="color: black">Aim : </b> Lorem ipsum dolor</b
-                      >
+                      <b style="color: black">Target : </b>
+                      <i style="color: #35d106" class="fas fa-check-circle"></i>
                     </p>
-                    <p class="p-0 m-0" style="color: #324a5e">
-                      <b
-                        ><b style="color: black">Achievement : </b> Lorem
-                        ipsum</b
-                      >
-                    </p>
+
                     <div class="progress my-2 w-50" style="height: 2px">
                       <div
                         class="progress-bar"
@@ -572,10 +575,14 @@
                       class="h-100 w-100"
                       style="
                         border-radius: 24px 0 24px 24px;
-                        background: #eef8f0;
+                        background: #eef8f05b;
                       "
                     >
-                      <h5 class="my-2" id="testimony" style="">
+                      <h6
+                        class="my-2"
+                        id="testimony"
+                        style="font-style: italic"
+                      >
                         <i
                           class="fa fa-quote-left"
                           style="
@@ -584,32 +591,26 @@
                             margin-right: 8px;
                           "
                         ></i>
-                        Lorem Ipsum is simply dummy text of the printing and
-                        typesetting industry.
-                      </h5>
+                        I like the program, I am just facing a little difficulty
+                        following it.
+                      </h6>
+                      <br />
                       <h5 id="testimonyGiver" style="color: #324a5e">
-                        <b>Firstname Surname</b>
+                        <b>Akshat</b>
                       </h5>
                     </div>
                   </div>
                   <div class="col-md-6 pt-2">
                     <p class="p-0 m-0" style="color: #324a5e">
-                      <b
-                        ><b style="color: black">Aim : </b> Lorem ipsum dolor</b
-                      >
-                    </p>
-                    <p class="p-0 m-0" style="color: #324a5e">
-                      <b
-                        ><b style="color: black">Achievement : </b> Lorem
-                        ipsum</b
-                      >
+                      <b style="color: black">Target : </b>
+                      <i style="color: #35d106" class="fas fa-check-circle"></i>
                     </p>
                     <div class="progress my-2 w-50" style="height: 2px">
                       <div
                         class="progress-bar"
                         role="progressbar"
-                        style="width: 60%; background: #35d106"
-                        aria-valuenow="60"
+                        style="width: 93%; background: #35d106"
+                        aria-valuenow="93"
                         aria-valuemin="0"
                         aria-valuemax="100"
                       ></div>
@@ -618,7 +619,7 @@
                       <span class="p me-1" style="color: #6c8dd0"
                         ><small>Satisfaction score</small>
                       </span>
-                      <small>60</small>
+                      <small>93</small>
                     </p>
                   </div>
                 </div>
@@ -631,10 +632,14 @@
                       class="h-100 w-100"
                       style="
                         border-radius: 24px 0 24px 24px;
-                        background: #eef8f0;
+                        background: #eef8f05b;
                       "
                     >
-                      <h5 class="my-2" id="testimony" style="">
+                      <h6
+                        class="my-2"
+                        id="testimony"
+                        style="font-style: italic"
+                      >
                         <i
                           class="fa fa-quote-left"
                           style="
@@ -643,25 +648,18 @@
                             margin-right: 8px;
                           "
                         ></i>
-                        Lorem Ipsum is simply dummy text of the printing and
-                        typesetting industry.
-                      </h5>
+                        I like the overall program. The lessons are useful too.
+                      </h6>
+                      <br />
                       <h5 id="testimonyGiver" style="color: #324a5e">
-                        <b>Firstname Surname</b>
+                        <b>Dr Nivedita</b>
                       </h5>
                     </div>
                   </div>
                   <div class="col-md-6 pt-2">
                     <p class="p-0 m-0" style="color: #324a5e">
-                      <b
-                        ><b style="color: black">Aim : </b> Lorem ipsum dolor</b
-                      >
-                    </p>
-                    <p class="p-0 m-0" style="color: #324a5e">
-                      <b
-                        ><b style="color: black">Achievement : </b> Lorem
-                        ipsum</b
-                      >
+                      <b style="color: black">Target : </b>
+                      <i style="color: #35d106" class="fas fa-check-circle"></i>
                     </p>
                     <div class="progress my-2 w-50" style="height: 2px">
                       <div
@@ -690,10 +688,14 @@
                       class="h-100 w-100"
                       style="
                         border-radius: 24px 0 24px 24px;
-                        background: #eef8f0;
+                        background: #eef8f05b;
                       "
                     >
-                      <h5 class="my-2" id="testimony" style="">
+                      <h6
+                        class="my-2"
+                        id="testimony"
+                        style="font-style: italic"
+                      >
                         <i
                           class="fa fa-quote-left"
                           style="
@@ -702,32 +704,27 @@
                             margin-right: 8px;
                           "
                         ></i>
-                        Lorem Ipsum is simply dummy text of the printing and
-                        typesetting industry.
-                      </h5>
+                        The program is interesting. I really like the coach, the
+                        way she talks, listen and explains makes all the
+                        difference.
+                      </h6>
+                      <br />
                       <h5 id="testimonyGiver" style="color: #324a5e">
-                        <b>Firstname Surname</b>
+                        <b>Roma</b>
                       </h5>
                     </div>
                   </div>
                   <div class="col-md-6 pt-2">
                     <p class="p-0 m-0" style="color: #324a5e">
-                      <b
-                        ><b style="color: black">Aim : </b> Lorem ipsum dolor</b
-                      >
-                    </p>
-                    <p class="p-0 m-0" style="color: #324a5e">
-                      <b
-                        ><b style="color: black">Achievement : </b> Lorem
-                        ipsum</b
-                      >
+                      <b style="color: black">Target : </b>
+                      <i style="color: #35d106" class="fas fa-check-circle"></i>
                     </p>
                     <div class="progress my-2 w-50" style="height: 2px">
                       <div
                         class="progress-bar"
                         role="progressbar"
-                        style="width: 45%; background: #35d106"
-                        aria-valuenow="45"
+                        style="width: 90%; background: #35d106"
+                        aria-valuenow="90"
                         aria-valuemin="0"
                         aria-valuemax="100"
                       ></div>
@@ -736,7 +733,7 @@
                       <span class="p me-1" style="color: #6c8dd0"
                         ><small>Satisfaction score</small>
                       </span>
-                      <small>45</small>
+                      <small>90</small>
                     </p>
                   </div>
                 </div>
@@ -784,7 +781,7 @@
               <a
                 class="btn p-0 my-0"
                 style="font-weight: 600; color: #324a5e"
-                href=""
+                href="https://logy.ai/"
                 >About Logy.ai</a
               >
             </p>
@@ -792,7 +789,7 @@
               <a
                 class="btn p-0 my-0"
                 style="font-weight: 600; color: #324a5e"
-                href=""
+                href="http://api.whatsapp.com/send/?phone=13203481995&text=Hi"
                 >Support</a
               >
             </p>
@@ -800,7 +797,7 @@
               <a
                 class="btn p-0 my-0"
                 style="font-weight: 600; color: #324a5e"
-                href=""
+                href="mailto: humans@logy.ai"
                 >Careers</a
               >
             </p>
@@ -810,7 +807,7 @@
               <a
                 class="btn p-0 my-0"
                 style="font-weight: 600; color: #324a5e"
-                href=""
+                href="mailto: humans@logy.ai"
                 >Contact Business</a
               >
             </p>
@@ -818,7 +815,7 @@
               <a
                 class="btn p-0 my-0"
                 style="font-weight: 600; color: #324a5e"
-                href=""
+                href="https://logy.ai/privacy.html"
                 >Privacy policy</a
               >
             </p>
@@ -826,9 +823,17 @@
               <a
                 class="btn p-0 my-0"
                 style="font-weight: 600; color: #324a5e"
-                href=""
+                href="https://logy.ai/terms_and_conditions.html"
                 >T & C</a
               >
+            </p>
+            <p>
+              <a
+                class="btn p-0 my-0"
+                style="font-weight: 600; color: #324a5e"
+                href="https://www.instagram.com/guidolife"
+                ><i class="fab fa-instagram"></i
+              ></a>
             </p>
           </div>
         </div>
