--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
                   <div class="w-100 rounded-pill text-center" id="navjoinbtn">
                     <a
                       class="btn"
-                      href="http://api.whatsapp.com/send/?phone=13203481995&text=Hi"
+                      href="https://www.instagram.com/guidolife"
                       id="joinusnav"
-                      >Join us Today</a
+                      ><i class="fab fa-instagram"></a
                     >
                   </div>
                 </div>
@@ -153,10 +153,13 @@
               </h3>
               <br />
               <p style="font-size: 18px; color: white">
-                <span>&#10003;</span> 24x7 Nutritionist.
+                <span>&#10003;</span> 24x7 Nutritionist
               </p>
               <p style="font-size: 18px; color: white">
                 <span>&#10003;</span> 24x7 Mental Wellness
+              </p>
+              <p style="font-size: 18px; color: white">
+                <span>&#10003;</span> Healthy Lifestyle ke Funde everyday
               </p>
               <p style="font-size: 18px; color: white">
                 <span>&#10003;</span> Custom plans
@@ -164,9 +167,7 @@
               <p style="font-size: 18px; color: white">
                 <span>&#10003;</span> Weekly updates
               </p>
-              <p style="font-size: 18px; color: white">
-                <span>&#10003;</span> Healthy Lifestyle ke Funde everyday
-              </p>
+              
             </div>
           </div>
         </div>
@@ -216,7 +217,7 @@
         <span style="color: #298e3e">vetted</span> therapists who you can trust
       </h3>
       <h5 class="" style="color: #909090">
-        Some of our prestigious collaborators belong to these institutions
+        From some of the most prestigious institutions
       </h5>
       <br />
       <div class="row">
@@ -298,7 +299,7 @@
               <img id="paraIcon" src="/img/satisfaction.svg" alt="" />
               <br />
               <br />
-              <p id="paraValue">99%</p>
+              <p id="paraValue">>95%</p>
               <p id="parameters">Satisfaction score</p>
             </div>
           </div>
@@ -355,7 +356,7 @@
                 ><b>1</b></a
               >
               <p class="w-75 ms-0" style="font-size: 24px; font-weight: 500">
-                Custom lessons
+                Daily Lifestyle Funde
               </p>
             </div>
           </div>
@@ -444,7 +445,7 @@
                 ><b>3</b></a
               >
               <p class="w-75 ms-0" style="font-size: 24px; font-weight: 500">
-                Nutrition expert for everyone individually
+                Personal nutrition expert 
               </p>
             </div>
           </div>
@@ -487,7 +488,7 @@
                 ><b>4</b></a
               >
               <p class="w-75 ms-0" style="font-size: 24px; font-weight: 500">
-                Mental wellness expert
+                Personal mental wellness expert
               </p>
             </div>
           </div>
@@ -534,7 +535,7 @@
                           "
                         ></i>
                         I have started seeing results now. I am confident about
-                        what to eat now.
+                        what to eat. The daily lessons make lifestyle choices a breeze. 
                       </h6>
                       <br />
                       <h5 id="testimonyGiver" style="color: #324a5e">
@@ -544,7 +545,7 @@
                   </div>
                   <div class="col-md-6 pt-2">
                     <p class="p-0 m-0" style="color: #324a5e">
-                      <b style="color: black">Target : </b>
+                      <b style="color: black">Target: Loose Weight</b>
                       <i style="color: #35d106" class="fas fa-check-circle"></i>
                     </p>
 
@@ -562,7 +563,7 @@
                       <span class="p me-1" style="color: #6c8dd0"
                         ><small>Satisfaction score</small>
                       </span>
-                      <small>87</small>
+                      <small>10/10</small>
                     </p>
                   </div>
                 </div>
@@ -591,18 +592,17 @@
                             margin-right: 8px;
                           "
                         ></i>
-                        I like the program, I am just facing a little difficulty
-                        following it.
+                        I am satisfied, It is a gret value addition to daily routine. I have seen change in myself. The daily lessons click when I face different scenarios.
                       </h6>
                       <br />
                       <h5 id="testimonyGiver" style="color: #324a5e">
-                        <b>Akshat</b>
+                        <b>Gurpreet</b>
                       </h5>
                     </div>
                   </div>
                   <div class="col-md-6 pt-2">
                     <p class="p-0 m-0" style="color: #324a5e">
-                      <b style="color: black">Target : </b>
+                      <b style="color: black">Target: Increased Agitily</b>
                       <i style="color: #35d106" class="fas fa-check-circle"></i>
                     </p>
                     <div class="progress my-2 w-50" style="height: 2px">
@@ -619,7 +619,7 @@
                       <span class="p me-1" style="color: #6c8dd0"
                         ><small>Satisfaction score</small>
                       </span>
-                      <small>93</small>
+                      <small>8/10</small>
                     </p>
                   </div>
                 </div>
@@ -648,7 +648,7 @@
                             margin-right: 8px;
                           "
                         ></i>
-                        I like the overall program. The lessons are useful too.
+                        I like the overall program. The lessons are really useful too.
                       </h6>
                       <br />
                       <h5 id="testimonyGiver" style="color: #324a5e">
@@ -658,7 +658,7 @@
                   </div>
                   <div class="col-md-6 pt-2">
                     <p class="p-0 m-0" style="color: #324a5e">
-                      <b style="color: black">Target : </b>
+                      <b style="color: black">Target: Weight loss</b>
                       <i style="color: #35d106" class="fas fa-check-circle"></i>
                     </p>
                     <div class="progress my-2 w-50" style="height: 2px">
@@ -675,7 +675,7 @@
                       <span class="p me-1" style="color: #6c8dd0"
                         ><small>Satisfaction score</small>
                       </span>
-                      <small>75</small>
+                      <small>8/10</small>
                     </p>
                   </div>
                 </div>
@@ -733,7 +733,7 @@
                       <span class="p me-1" style="color: #6c8dd0"
                         ><small>Satisfaction score</small>
                       </span>
-                      <small>90</small>
+                      <small>8.5/10</small>
                     </p>
                   </div>
                 </div>
@@ -765,7 +765,7 @@
             <br id="mobnotbr" />
             <h4 style="line-height: 32px">
               Our Chat-Bot is live on
-              <a href=""
+              <a href="http://api.whatsapp.com/send/?phone=13203481995&text=Hi"
                 ><img
                   class="mx-2"
                   style="height: 32px"
