--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     />
     <link rel="stylesheet" href="/style.css" />
     <link rel="stylesheet" href="/alt.css" />
-    <title>Document</title>
+    <title>Guido Health | A lifestyle that work</title>
   </head>
   <body>
     <div id="navpc" class="mx-0 fixed-top">
